--- a/web/themes/dedrone/scss/styles.scss
+++ b/web/themes/dedrone/scss/styles.scss
@@ -31,6 +31,7 @@
 @import 'blocks/tabs_page_Mitigation';
 @import 'blocks/page_hardware';
 @import 'blocks/products_software';
+@import 'blocks/customers-coment';
 
 @import 'paragraph/technology_partners';
 @import 'paragraph/shared';
