--- a/web/themes/dedrone/templates/paragraph/paragraph--case-studies-paragraph.html.twig
+++ b/web/themes/dedrone/templates/paragraph/paragraph--case-studies-paragraph.html.twig
@@ -53,7 +53,7 @@ not paragraph.isPublished() ? 'paragraph--unpublished'
                 {% block content %}
                     <div class="col-sm-12">
                         <div class="content-wrap">
-                            {{ content.field_content }}
+                            {{ content.field_description }}
                         </div>
                     </div>
                     {{ content.field_case_block }}
