--- a/web/themes/dedrone/templates/paragraph/paragraph--customer-page-content-with-image.html.twig
+++ b/web/themes/dedrone/templates/paragraph/paragraph--customer-page-content-with-image.html.twig
@@ -53,10 +53,10 @@
     <div class="row customer-image-text-wrap">
       {% block content %}
         <div class="col-xs-12 col-md-7 img-wrap">
-          {{ content.field_image_custom_page }}
+          {{ content.field_image }}
         </div>
         <div class="col-xs-12 col-md-4 offset-md-1 text-wrap">
-           {{ content.field_content }}
+           {{ content.field_description }}
          <div class="button-wrapper">
            {{ content.field_button }}
          </div>
