--- a/web/themes/dedrone/templates/paragraph/paragraph--customer-secondary-pages-with-im.html.twig
+++ b/web/themes/dedrone/templates/paragraph/paragraph--customer-secondary-pages-with-im.html.twig
@@ -56,7 +56,7 @@
 
         </div>
         <div class="col-xs-12 col-lg-6 text-wrap">
-         {{ content.field_content }}
+         {{ content.field_description }}
         </div>
       {% endblock %}
     </div>
