--- a/web/themes/dedrone/templates/paragraph/paragraph--customers-secondary-slider.html.twig
+++ b/web/themes/dedrone/templates/paragraph/paragraph--customers-secondary-slider.html.twig
@@ -54,7 +54,7 @@
        <div class="container">
          <div class="row text-wrapper">
            <div class="col-sm-12">
-              {{ content.field_content }}
+              {{ content.field_description }}
            </div>
          </div>
          <div class="row icon-wrapper">
