--- a/web/themes/dedrone/templates/paragraph/paragraph--slider-icon-block.html.twig
+++ b/web/themes/dedrone/templates/paragraph/paragraph--slider-icon-block.html.twig
@@ -51,7 +51,7 @@
 {% block paragraph %}
   {% block content %}
      <div class="fields-wrapper">
-       <div class="icon">{{ content.field_icon }}</div>
+       <div class="icon">{{ content.field_image}}</div>
        <div class="small-title">{{ content.field_our_products }}</div>
        <div class="title">{{ content.field_shared_h2_title }}</div>
      </div>
