--- a/web/themes/dedrone/css/blocks/case-studies-paragraph.css
+++ b/web/themes/dedrone/css/blocks/case-studies-paragraph.css
@@ -15,19 +15,27 @@
       margin-top: 25px; }
   .case-studies-paragraph .view-case-studies {
     margin: 0 -30px; }
-    .case-studies-paragraph .view-case-studies .case-study-element-wrap {
-      min-height: 280px;
-      margin-top: 0;
-      padding-right: 0;
-      padding-bottom: 20px;
-      padding-left: 0;
+    @media (max-width: 600px) {
+      .case-studies-paragraph .view-case-studies {
+        margin: 0; } }
+    .case-studies-paragraph .view-case-studies .views-row {
+      width: 31%;
+      float: left;
+      margin: 0 1% 20px 1%;
       border-radius: 2px;
       background-image: linear-gradient(180deg, #fff, #fff);
       box-shadow: none; }
-      .case-studies-paragraph .view-case-studies .case-study-element-wrap .views-field-field-secondary-page-kink a {
-        padding: 20px 20px 0 20px;
+      @media (max-width: 600px) {
+        .case-studies-paragraph .view-case-studies .views-row {
+          width: 100%; } }
+      .case-studies-paragraph .view-case-studies .views-row .views-field-field-image-from-next-page {
+        max-height: 215px;
+        overflow: hidden; }
+      .case-studies-paragraph .view-case-studies .views-row .views-field-field-link-to-next-page a {
+        padding: 20px;
         color: #111;
         font-size: 15px;
+        min-height: 80px;
         line-height: 20px;
         font-weight: 500;
         text-decoration: none; }
