--- a/web/themes/dedrone/scss/blocks/secondary_custumers_slider.scss
+++ b/web/themes/dedrone/scss/blocks/secondary_custumers_slider.scss
@@ -70,7 +70,7 @@
         text-align: center;
         font-size: 12px;
         line-height: 15px;
-        font-weight: 600s;
+        font-weight: 600;
         text-transform: uppercase;
       }
       .title{
@@ -79,6 +79,9 @@
         line-height: 24px;
         font-weight: 300;
         margin: 20px 0 5px;
+        h2{
+          color: #fff;
+        }
       }
     }
   }
