--- a/web/themes/dedrone/css/styles.css
+++ b/web/themes/dedrone/css/styles.css
@@ -7914,13 +7914,13 @@ button {
   color: #fff; }
 
 .text-padding h1 {
-  padding-bottom: 20px;
-  padding-top: 20px; }
+  padding-bottom: 10px;
+  padding-top: 10px; }
 
 .text-padding h3 {
   padding-top: 10px;
   padding-bottom: 10px;
-  font-weight: 400;
+  font-weight: 500;
   text-transform: uppercase; }
 
 .text-padding p {
@@ -8148,11 +8148,19 @@ Right_vertically|Right vertically
       padding-top: 150px;
       padding-bottom: 150px; } }
 
-.align-column-center .paragraph__column {
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-align: center;
-      align-items: center; }
+.vertical-align-center {
+  padding: 0px 25px; }
+  .vertical-align-center .paragraph__column {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-align: center;
+        align-items: center; }
+
+.block-quote p:before {
+  content: open-quote; }
+
+.block-quote p:after {
+  content: close-quote; }
 
 .block-quote p {
   quotes: '\201c' '\201d';
@@ -8161,16 +8169,21 @@ Right_vertically|Right vertically
   padding: 0;
   border-left-style: none;
   border-left-width: 0;
-  font-family: Martel,sans-serif;
   color: #111;
   font-size: 20px;
-  font-weight: 300; }
+  line-height: 30px;
+  font-weight: 300;
+  letter-spacing: 1px; }
 
 .block-quote h5 {
   margin-top: 10px;
   letter-spacing: 1px;
   text-transform: uppercase;
   font-weight: 700; }
+
+.img-default {
+  display: block;
+  min-width: 450px; }
 
 .paragraph--type--bundle-description-about-us-page h1 {
   margin-top: 0px;
