--- a/web/themes/dedrone/css/styles.css
+++ b/web/themes/dedrone/css/styles.css
@@ -7546,11 +7546,14 @@ button {
       margin-bottom: 10px;
       padding: 15px 50px;
       border-radius: 4px;
-      background-image: linear-gradient(180deg, #fff, #fff);
+      background-color: #fff;
       color: #0a0c15;
       font-size: 12px;
       line-height: 15px;
       font-weight: 400; }
+      .slider-main .wrap-description .button:hover {
+        background-color: #009ee3;
+        color: #fff; }
   .slider-main .slide-animationimage {
     position: absolute;
     top: 50%;
@@ -7578,8 +7581,11 @@ button {
     .slider-main .swiper-slide:nth-child(2) p {
       color: #111; }
     .slider-main .swiper-slide:nth-child(2) .button {
-      background-image: linear-gradient(180deg, #009ee3, #009ee3);
+      background-color: #009ee3;
       color: #fff; }
+      .slider-main .swiper-slide:nth-child(2) .button:hover {
+        background-color: #fff;
+        color: #009ee3; }
   .slider-main .swiper-container {
     height: 100%; }
     .slider-main .swiper-container .image-wrap {
@@ -7761,7 +7767,7 @@ button {
   padding-bottom: 150px;
   background-image: url("../images/text_columns_bg.jpg");
   background-repeat: no-repeat;
-  background-position: 50% 0;
+  background-position: 50% 50%;
   background-size: cover; }
   .text-columns .title {
     margin: 10px 0;
@@ -7813,7 +7819,12 @@ button {
         margin-left: auto; } }
   @media (max-width: 991px) {
     .text-columns {
-      padding-bottom: 100px; } }
+      padding-top: 120px;
+      padding-bottom: 100px;
+      background-position: 50% 0; } }
+  @media (max-width: 767px) {
+    .text-columns {
+      padding-top: 150px; } }
 
 .products-intro {
   position: relative;
