--- a/web/themes/dedrone/scss/blocks/_text-columns.scss
+++ b/web/themes/dedrone/scss/blocks/_text-columns.scss
@@ -4,7 +4,7 @@
 	padding-bottom: 150px;
 	background-image: url('../images/text_columns_bg.jpg');
 	background-repeat: no-repeat;
-	background-position: 50% 0;
+	background-position: 50% 50%;
 	background-size: cover;
 
 	.title {
@@ -83,7 +83,11 @@
 	}
 
 	@media (max-width: 991px) {
-		//padding-top: 100px;
+		padding-top: 120px;
 		padding-bottom: 100px;
+		background-position: 50% 0;
+	}
+	@media (max-width: 767px) {
+		padding-top: 150px;
 	}
 }
