--- a/web/themes/dedrone/scss/base/_typography.scss
+++ b/web/themes/dedrone/scss/base/_typography.scss
@@ -1,5 +1,6 @@
 // typography go here
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,700,800,900');
+@import url('https://fonts.googleapis.com/css?family=Martel:100,200,300,400,500,700,800,900');
 
 
 h1{
@@ -79,5 +80,5 @@ li{
 }
 
 
-.shared-h1-title{ text-align: center; }
+
 
