--- a/web/themes/dedrone/scss/styles.scss
+++ b/web/themes/dedrone/scss/styles.scss
@@ -33,6 +33,8 @@
 @import 'blocks/page_hardware';
 @import 'blocks/products_software';
 @import 'blocks/customers-coment';
+@import 'blocks/jobs-slider';
+@import 'blocks/two-columns-paragraph.scss';
 
 @import 'paragraph/technology_partners';
 @import 'paragraph/shared';
