Created Blog page

--- a/web/themes/dedrone/scss/styles.scss
+++ b/web/themes/dedrone/scss/styles.scss
@@ -17,6 +17,7 @@
 @import 'blocks/secondary_page_slider';
 @import 'blocks/customer_image_text_wrap';
 @import 'blocks/tabs';
+@import 'blocks/blog';
 @import 'blocks/forms';
 @import 'blocks/event-registration';
 @import 'blocks/home-main-slider';
