--- a/web/themes/dedrone/css/styles.css
+++ b/web/themes/dedrone/css/styles.css
@@ -7374,6 +7374,122 @@ a {
   -ms-flex: 1 0;
       flex: 1 0; }
 
+.featured-blog-posts {
+  margin-bottom: 100px; }
+  .featured-blog-posts::after {
+    display: block;
+    clear: both;
+    content: ""; }
+  .featured-blog-posts .post-item {
+    float: left;
+    width: 50%;
+    height: 450px; }
+    .featured-blog-posts .post-item .post-wrap:after {
+      background: rgba(1, 29, 42, 0.6); }
+    .featured-blog-posts .post-item .featured-blog-post-text {
+      top: auto;
+      bottom: 0;
+      padding: 30px; }
+
+.blog-posts .post-item {
+  height: 300px;
+  margin-bottom: 30px; }
+  .blog-posts .post-item .post-wrap {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    transition: all 0.15s ease; }
+    .blog-posts .post-item .post-wrap:after {
+      background: rgba(1, 29, 42, 0.95); }
+    .blog-posts .post-item .post-wrap:hover .featured-blog-post-text .blog-date {
+      color: #fff; }
+  .blog-posts .post-item .featured-blog-post-text {
+    top: 0;
+    bottom: auto;
+    padding: 30px 20px 0px 20px; }
+    .blog-posts .post-item .featured-blog-post-text h5 {
+      font-size: 12px;
+      line-height: 15px;
+      font-weight: 700;
+      color: #fff;
+      text-transform: uppercase; }
+    .blog-posts .post-item .featured-blog-post-text .blog-date {
+      display: block;
+      padding-right: 0;
+      padding-left: 0;
+      border-right: 0 none;
+      color: #f05c40;
+      transition: all 0.15s ease; }
+    .blog-posts .post-item .featured-blog-post-text .blog-author {
+      padding-left: 0; }
+
+.post-item {
+  overflow: hidden;
+  position: relative; }
+  .post-item .post-wrap:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    width: 100%;
+    height: 100%;
+    transition: all 0.15s ease; }
+  .post-item .post-wrap:hover:after {
+    background: #f05c40; }
+  .post-item .featured-blog-post-text {
+    position: absolute;
+    z-index: 5;
+    left: 0;
+    width: 100%;
+    z-index: 10; }
+    .post-item .featured-blog-post-text h5 {
+      font-size: 12px;
+      line-height: 15px;
+      font-weight: 700;
+      color: #fff;
+      text-transform: uppercase; }
+    .post-item .featured-blog-post-text .blog-date {
+      display: inline-block;
+      padding-right: 10px;
+      padding-left: 0;
+      border-right: 1px solid #fff; }
+    .post-item .featured-blog-post-text .blog-author {
+      display: inline-block;
+      margin-right: 10px;
+      padding-right: 10px;
+      padding-left: 10px;
+      border-right: 1px solid #fff; }
+      .post-item .featured-blog-post-text .blog-author a {
+        font-size: 12px;
+        line-height: 15px;
+        font-weight: 700;
+        color: #fff;
+        text-decoration: none; }
+    .post-item .featured-blog-post-text .blog-category {
+      display: inline-block;
+      padding-right: 0; }
+    .post-item .featured-blog-post-text .blog-title a {
+      margin-top: 15px;
+      margin-bottom: 5px;
+      display: inline-block;
+      color: #fff;
+      font-weight: 300;
+      font-size: 20px;
+      line-height: 24px; }
+  .post-item .image-wrap {
+    position: absolute;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%; }
+    .post-item .image-wrap img {
+      width: 100%;
+      height: 100%;
+      -o-object-fit: cover;
+         object-fit: cover; }
+
 input[type="text"],
 input[type="email"],
 input[type="number"],
