--- a/web/themes/dedrone/templates/views/blog_posts/blog_posts/views-view-unformatted--blog-posts.html.twig
+++ b/web/themes/dedrone/templates/views/blog_posts/blog_posts/views-view-unformatted--blog-posts.html.twig
@@ -19,6 +19,7 @@
   <h3>{{ title }}</h3>
 {% endif %}
 <div class="container">
+    <h3 class="blogs-title">{{ 'Recent Blog Posts'|t }}</h3>
   <div class="row">
     {% for row in rows %}
       {%
