--- a/web/themes/dedrone/templates/views/blog_posts/views-view--blog-posts.html.twig
+++ b/web/themes/dedrone/templates/views/blog_posts/views-view--blog-posts.html.twig
@@ -40,15 +40,62 @@
   ]
 %}
 <div{{ attributes.addClass(classes) }}>
-  <div class="">
-    {% if rows %}
-      <div class="view-content">
-        {{ rows }}
+  {{ title_prefix }}
+  {% if title %}
+    {{ title }}
+  {% endif %}
+  {{ title_suffix }}
+  {% if header %}
+    <div class="view-header">
+      {{ header }}
+    </div>
+  {% endif %}
+  {% if exposed %}
+    <div class="view-filters blogs-filter">
+        <div class="container">
+            {{ exposed }}
+        </div>
+    </div>
+  {% endif %}
+  {% if attachment_before %}
+    <div class="attachment attachment-before">
+      {{ attachment_before }}
+    </div>
+  {% endif %}
+
+  {% if rows %}
+    <div class="view-content">
+      {{ rows }}
+    </div>
+  {% elseif empty %}
+    <div class="view-empty">
+      {{ empty }}
+    </div>
+  {% endif %}
+
+  {% if pager %}
+    {{ pager }}
+  {% endif %}
+  {% if attachment_after %}
+    <div class="attachment attachment-after">
+      {{ attachment_after }}
+    </div>
+  {% endif %}
+  {% if more %}
+      <div class="container">
+          <div class="more-blogs">
+            {{ more }}
+          </div>
       </div>
-    {% elseif empty %}
-      <div class="view-empty">
-        {{ empty }}
-      </div>
-    {% endif %}
-  </div>
+  {% endif %}
+  {% if footer %}
+    <div class="view-footer">
+      {{ footer }}
+    </div>
+  {% endif %}
+  {% if feed_icons %}
+    <div class="feed-icons">
+      {{ feed_icons }}
+    </div>
+  {% endif %}
 </div>
