--- a/web/themes/dedrone/scss/blocks/_products_software.scss
+++ b/web/themes/dedrone/scss/blocks/_products_software.scss
@@ -1,6 +1,4 @@
-.field--name-field-background-your-airspace {
-  display: hidden;
-}
+
 
 .page_software_your_airspace {
   height: 600px;
@@ -49,8 +47,8 @@
       }
 
       h2 {
-        clear: both;
-        color: #fcf8f8;
+font-weight: 200;
+        color: #fff;
         margin-top: 20px;
         font-size: 20px;
         line-height: 24px;
