--- a/web/themes/dedrone/templates/paragraph/paragraph--introducing-the-rf-300.html.twig
+++ b/web/themes/dedrone/templates/paragraph/paragraph--introducing-the-rf-300.html.twig
@@ -11,7 +11,7 @@
 {% block paragraph %}
   <div{{ attributes.addClass(classes) }}>
     {% block content %}
-      {{ content }}
+      {{ content.field_introducing_the_rf }}
     {% endblock %}
   </div>
 {% endblock paragraph %}
