--- a/web/themes/dedrone/templates/paragraph/paragraph--section-page-mitigation--default.html.twig
+++ b/web/themes/dedrone/templates/paragraph/paragraph--section-page-mitigation--default.html.twig
@@ -11,7 +11,7 @@
 
     <div{{ attributes.addclass(classes) }}>
       {% block content %}
-        {{ content }}
+        {{ content.field_text_page_mitigation }}
       {% endblock %}
     </div>
 
