--- a/web/themes/dedrone/templates/paragraph/paragraph--section-your-airspace-secured.html.twig
+++ b/web/themes/dedrone/templates/paragraph/paragraph--section-your-airspace-secured.html.twig
@@ -12,7 +12,7 @@
   {% block paragraph %}
     <div{{ attributes.addClass(classes) }}>
       {% block content %}
-        {{ content }}
+        {{ content.field_label_your_airspace_secure }}
       {% endblock %}
     </div>
   {% endblock paragraph %}
