--- a/web/themes/dedrone/templates/paragraph/paragraph--video-mantle1.html.twig
+++ b/web/themes/dedrone/templates/paragraph/paragraph--video-mantle1.html.twig
@@ -11,7 +11,7 @@
 {% block paragraph %}
   <div{{ attributes.addClass(classes) }}>
     {% block content %}
-      {{ content }}
+      {{ content.field_label_videos_page }}
     {% endblock %}
   </div>
 {% endblock paragraph %}
