--- a/web/themes/dedrone/scss/paragraph/_about_us.scss
+++ b/web/themes/dedrone/scss/paragraph/_about_us.scss
@@ -1,8 +1,7 @@
 
 ////Description
 
-.paragraph--type--bundle-description-about-us-page
-{
+.paragraph--type--bundle-description-about-us-page{
 	h1{
 		margin-top: 0px;
 		margin-bottom:5px;	
@@ -33,16 +32,14 @@
    		padding-right: 10px;
    		padding-bottom:100px;
 	}
-
-	h1{	
+	h1{
 		text-align: center;	
 		margin-top: 0px;
 	    margin-bottom: 5px;
 	    color: #fff;
 
 	}
-
-	h3{ 
+	h3{
 		text-align: center;	
 	    margin-bottom: 0px;
 	    margin-top:0px;
