--- a/web/themes/dedrone/scss/paragraph/_shared.scss
+++ b/web/themes/dedrone/scss/paragraph/_shared.scss
@@ -5,8 +5,7 @@
 
 /* Paragraphs background styles
 ========================================================================== */
-.background_image
-{
+.background_image{
         background-position: 0 0,50% 50% !important;
         background-size: auto,cover !important;
         display:flex !important;
@@ -412,5 +411,96 @@ Right_vertically|Right vertically
   }
 
 }
+
+
+.library-item {
+  display: -ms-flexbox;
+  height: 150px;
+  padding-right: 10px;
+  padding-left: 30px;
+  margin: 10px 10px;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  display: flex !important;
+  align-content: center !important;
+  flex-wrap:wrap !important;
+  break-after: always;
+  .field--name-field-library-category
+  {
+    width:100%;
+  }
+  box-shadow: 1px 1px 8px 0 rgba(0,0,0,.15);
+}
+
+.node--type-library
+{
+  //Descripton
+  @extend .text-color-white;
+  .field--name-field-description{@extend .text-padding; }
+
+  //Web Form
+  .field--name-field-submit-form-to-download{
+    label {
+      display: block;
+      margin: 25px 0 0 0;
+      font-weight: 700;
+      font-size: 10px;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+      color: #7d949f !important;
+    }
+
+    input {
+      color: #fff;
+    }
+
+    input,
+    select {
+      border: 0 none;
+      border-bottom: 1px solid #426270;
+      padding: 5px 0;
+      background: transparent;
+      font-size: 13px;
+    }
+    .btn
+    {
+      margin-top:30px;
+      width:100%;
+      background-color: #009ee3;
+      border: 1px solid #009ee3;
+      display: block;
+      text-align: center;
+      padding: 15px 50px;
+      border-radius: 4px;
+      background-image: none;
+      font-size: 12px;
+      line-height: 15px;
+      font-weight: 400;
+      text-transform: uppercase;
+      a{
+        color: #fff;
+      }
+
+      &:hover
+      {
+        background-color: #3898EC;
+        border: 1px solid #3898EC;
+      }
+    }
+
+    h2,
+    p,
+    .field__label {
+      margin-top:30px;
+      color: #fff;
+      padding-bottom:20px;
+    }
+
+
+  }
+}
+
 
 
