--- a/web/themes/dedrone/scss/blocks/case-studies-paragraph.scss
+++ b/web/themes/dedrone/scss/blocks/case-studies-paragraph.scss
@@ -22,7 +22,7 @@
     @media (max-width: 600px) {
       margin: 0;
     }
-    .views-row {
+    .second-custom {
       width: 31%;
       float: left;
       margin: 0 1% 20px 1%;
