--- a/web/themes/dedrone/scss/styles.scss
+++ b/web/themes/dedrone/scss/styles.scss
@@ -35,6 +35,8 @@
 @import 'blocks/customers-coment';
 @import 'blocks/jobs-slider';
 @import 'blocks/two-columns-paragraph.scss';
+@import 'blocks/press-events.scss';
+@import 'blocks/other-news.scss';
 
 @import 'paragraph/technology_partners';
 @import 'paragraph/shared';
