--- a/web/themes/dedrone/templates/paragraph/paragraph--shared-wrapper.html.twig
+++ b/web/themes/dedrone/templates/paragraph/paragraph--shared-wrapper.html.twig
@@ -23,11 +23,11 @@
               </div>
           </div>
        {% elseif (style == "Gradient_image") %}
-          <div class = "background_image" style="background:linear-gradient(90deg,rgba(0,0,0,.5) 21%,hsla(0,0%,7%,0)), url({{ background_image_url }}) no-repeat center top;">
-              <div class= "{{css_class}}">
-                  {{ content.field_content }}
-              </div>
-          </div>
+           <div class = "background_image" style="background:{{gradient}} url({{ background_image_url }}) no-repeat center top;">
+               <div class= "{{css_class}}">
+                   {{ content.field_content }}
+               </div>
+           </div>
        {% else %}
           <div class = "{{css_class}}">
               {{ content.field_content }}
