Created Blog Map

--- a/web/themes/dedrone/scss/blocks/_header.scss
+++ b/web/themes/dedrone/scss/blocks/_header.scss
@@ -65,16 +65,6 @@
 			& > span {
 				color: #e5310e;
 			}
-
-			//span {
-			//	display: block;
-			//	padding: 5px 0 4px 0;
-			//	font-size: 13px;
-			//	font-weight: 400;
-			//	letter-spacing: 1px;
-			//	text-transform: uppercase;
-			//	cursor: pointer;
-			//}
 		}
 		
 		& > a,
@@ -106,9 +96,10 @@
 				display: none;
 				position: absolute;
 				z-index: 11;
-				right: -35px;
-				left: -35px;
-				min-width: 100%;
+				right: auto;
+				left: 50%;
+				min-width: 180px;
+				transform: translateX(-50%);
 				padding: 10px;
 				margin: 0px;
 				background: #fff;
@@ -116,7 +107,11 @@
 				box-shadow: 1px 1px 5px 1px rgba(0,0,0,.25);
 
 				a {
-					padding: 7px 0 7px 20px;
+					padding: 7px 0 7px 10px;
+					text-decoration: none !important;
+					font-weight: 400;
+					font-size: 13px;
+
 				}
 			}
 
