--- a/web/themes/dedrone/scss/blocks/_blog.scss
+++ b/web/themes/dedrone/scss/blocks/_blog.scss
@@ -264,6 +264,8 @@
 }
 
 .blogs-filter {
+	margin-bottom: 30px;
+
 	.form-item {
 		width: 100%;
 		@include clearfix;
@@ -295,5 +297,191 @@
 		line-height: 15px;
 		text-transform: uppercase;
 	}
+
+	.form-submit {
+		float: right;
+		@extend .btn;
+		@extend .btn-light;
+	}
 }
 
+.blog-map {
+
+	&-wrap {
+		@include clearfix;
+	}
+
+	.incident-header {
+		display: flex;
+		float: left;
+		flex-direction: column;
+		justify-content: center;
+		padding-right: 60px;
+		padding-left: 60px;
+		height: 525px;
+		width: 30%;
+		background-color: #011d2a;
+
+		h2 {
+			font-size: 40px;
+			line-height: 45px;
+			color: #fff;
+		}
+
+		p {
+			margin: 20px 0 10px 0;
+			font-size: 20px;
+			line-height: 24px;
+			color: #fff;
+		}
+	}
+
+	.incident-map {
+		background: #0e1626;
+		float: left;
+		width: 70%;
+		height: 525px;
+		overflow: hidden;
+
+		.geolocation-common-map-container {
+			& > div {
+				background: #0e1626 !important;
+			}
+		}
+	}
+
+	.location-content {
+		max-width: 245px;
+
+		.geolocation-latlng {
+			font-size: 10px;
+			font-weight: 600;
+			text-transform: uppercase;
+			color: #000;
+			margin: 0;
+		}
+
+		.location-title {
+			font-size: 16px;
+			font-weight: 300;
+			line-height: 20px;
+			margin: 15px 0;
+		}
+
+		.link-node {
+			a {
+				font-size: 13px;
+				color: #009ee3;
+				text-decoration: none;
+			}
+		}
+	}
+
+	@media (max-width: 991px) {
+		.incident-header {
+			width: 40%;
+		}
+
+		.incident-map {
+			width: 60%;
+		}
+	}
+
+	@media (max-width: 767px) {
+		.incident-header,
+		.incident-map {
+			width: 100%;
+		}
+
+		.incident-header {
+			height: 400px;
+		}
+
+		.incident-map {
+
+
+		}
+
+	}
+}
+
+.blog-list {
+	padding: 100px 0;
+
+	.views-exposed-form {
+		label,
+		.description {
+			//float: left;
+			display: block;
+			margin-bottom: 20px;
+			color: #111;
+			font-size: 13px;
+			line-height: 17px;
+			font-weight: 500;
+			text-transform: uppercase;
+		}
+
+		.form-select {
+			//float: right;
+			width: 100px;
+			height: 35px;
+			padding: 10px 20px 10px 0;
+			background: #fff url(../images/arrow-down.svg) 100%/15% no-repeat;
+			background-size: 20px 10px;
+			border: 0 none;
+			appearance: none;
+			color: #111;
+			font-size: 12px;
+			line-height: 15px;
+			text-transform: uppercase;
+		}
+
+		.form-submit {
+			@extend .btn;
+			@extend .btn-light;
+		}
+	}
+
+	.list-table {
+		padding: 50px 0;
+	}
+
+	.list-labels {
+		border-top: 1px dotted #111;
+		padding: 20px 0 30px 0;
+		color: #111;
+		font-size: 13px;
+		line-height: 17px;
+		font-weight: 500;
+		text-transform: uppercase;
+	}
+
+	.post-list-item {
+		padding-top: 15px;
+		padding-bottom: 20px;
+		border-bottom: 1px solid #e4e4e4;
+		color: #111;
+		font-size: 14px;
+		line-height: 19px;
+	}
+
+	@media (max-width: 991px) {
+		padding: 70px 0;
+	}
+
+	@media (max-width: 575px) {
+		.list-table {
+			padding: 0;
+		}
+		.post-list-item {
+			.title {
+				font-weight: 500;
+				margin-bottom: 10px;
+			}
+
+			.geolocation {
+				margin-bottom: 10px;
+			}
+		}
+	}
+}
